# fairchild_ves

./: Cargo.toml  README.md  index.htm
pkg/: README.md  fairchild_ves.d.ts  fairchild_ves.js  fairchild_ves_bg.wasm  fairchild_ves_bg.wasm.d.ts  package.json
src/: keyboard.rs  lib.rs  side_panel.rs  sound.rs  video.rs
